<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_back"
    tools:context=".activities.AdminActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/admin_title"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:fontFamily="@font/quicksand"
        android:gravity="center"
        android:text="@string/admin_title"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <RadioGroup
        android:id="@+id/system_state_buttons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/admin_title"
        app:layout_constraintBottom_toTopOf="@id/mail_notify_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_weight="5">

        <RadioButton
            android:id="@+id/started_state_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginVertical="5dp"
            android:background="@drawable/button_radio"
            android:button="@null"
            android:fontFamily="@font/quicksand"
            android:gravity="center"
            android:paddingBottom="@dimen/purple_border_height"
            android:text="@string/started_state_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_big"
            android:enabled="false"/>

        <RadioButton
            android:id="@+id/demo_state_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginVertical="5dp"
            android:background="@drawable/button_radio"
            android:button="@null"
            android:fontFamily="@font/quicksand"
            android:gravity="center"
            android:paddingBottom="@dimen/purple_border_height"
            android:text="@string/demo_state_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_big"
            android:enabled="false"/>

        <RadioButton
            android:id="@+id/stopped_state_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginVertical="5dp"
            android:background="@drawable/button_radio"
            android:button="@null"
            android:fontFamily="@font/quicksand"
            android:gravity="center"
            android:paddingBottom="@dimen/purple_border_height"
            android:text="@string/stopped_state_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_big"
            android:enabled="false"/>

    </RadioGroup>

    <Button
        android:id="@+id/mail_notify_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/button"
        android:enabled="true"
        android:fontFamily="@font/quicksand"
        android:paddingBottom="10dp"
        android:text="@string/mail_notify_text"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_big"
        android:onClick="showMailNotifyDialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/system_state_buttons"
        app:layout_constraintVertical_weight="1" />


</androidx.constraintlayout.widget.ConstraintLayout>