...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_back"
    android:orientation="vertical">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/notify_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/notify_switch_text"
...
        android:layout_marginVertical="10dp"
        android:layout_marginLeft="20dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/notify_threshold_text"
        android:textColor="@color/grey"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintEnd_toStartOf="@id/notify_threshold_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notify_switch" />

    <EditText
        android:id="@+id/notify_threshold_input"
        android:layout_width="60dp"
...
