<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Freeturilo</string>
    <string name="logo_description">Logo aplikacji</string>
    <string name="map_button_text">Mapa</string>
    <string name="route_button_text">Trasa</string>
    <string name="history_button_text">Historia tras</string>
    <string name="map_caption_text">Mapa</string>
    <string name="map_description">Mapa</string>
    <string name="no_favourites_message">Ulubione miejsca są niedostępne</string>
    <string name="favourite_dialog_title">Zarządzaj ulubionym miejscem</string>
    <string name="add_favourite_dialog_title">Dodaj ulubione miejsce</string>
    <string name="edit_favourite_dialog_title">Edytuj ulubione miejsce</string>
    <string name="favourite_dialog_name_hint">Nazwa</string>
    <string name="delete_favourite_message">Czy chcesz usunąć ulubione miejsce</string>
    <string name="favourite_home_text">dom</string>
    <string name="favourite_work_text">praca</string>
    <string name="favourite_school_text">szkoła</string>
    <string name="favourite_other_text">inne</string>
    <string name="ok_text">OK</string>
    <string name="cancel_text">Anuluj</string>
    <string name="yes_text">Tak</string>
    <string name="favourite_helper_text">Ulubione miejsce</string>
    <string name="station_helper_text">"Stacja rowerowa"</string>
    <string name="bikes_availability_text">rowery</string>
    <string name="station_working_text">sprawna</string>
    <string name="station_reported_text">zgłoszona</string>
    <string name="station_broken_text">niesprawna</string>
    <string name="route_create_title">Trasa</string>
    <string name="input_autocomplete_hint">Pole tekstowe dla lokalizacji</string>
    <string name="start_input_hint">Początek trasy</string>
    <string name="stop_hint">Przystanek</string>
    <string name="end_input_hint">Koniec trasy</string>
    <string name="add_stop_text">+przystanek</string>
    <string name="cost_criterion_text">najtańsza</string>
    <string name="hybrid_criterion_text">optymalna</string>
    <string name="time_criterion_text">najszybsza</string>
    <string name="submit_route_text">Wyznacz</string>
    <string name="google_attribution">Atrybucja Google</string>
    <string name="specify_address_title">Czy chodziło o…</string>
    <string name="no_address_to_specify_message">Nie zlokalizowano punktu</string>
    <string name="no_history_message">Historia tras jest niedostępna</string>
    <string name="history_title">Historia tras</string>
    <string name="login_title">Logowanie</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Hasło</string>
    <string name="submit_login_text">Zaloguj</string>
    <string name="admin_title">Stan systemu</string>
    <string name="started_state_text">stan działania</string>
    <string name="demo_state_text">stan demonstracyjny</string>
    <string name="stopped_state_text">stan zatrzymania</string>
    <string name="mail_notify_text">powiadomienia mailowe</string>
    <string name="notify_switch_text">Powiadomienia o\nzgłoszonych stacjach</string>
    <string name="notify_threshold_text">Liczba zgłoszeń stacji\ndo powiadomienia</string>
    <string name="notify_threshold_hint">Podaj</string>
    <string name="mail_notify_dialog_title">Powiadomienia mailowe</string>
    <string name="change_system_state_message">Czy chcesz wprowadzić system w</string>
    <string name="report_station_message">"Czy chcesz zgłosić stację"</string>
    <string name="set_working_station_message">Czy chcesz oznaczyć jako sprawną stację</string>
    <string name="set_broken_station_message">Czy chcesz oznaczyć jako niesprawną stację</string>
    <string name="route_caption_text">Trasa</string>
    <string name="distance_helper_text">długość</string>
    <string name="time_helper_text">czas</string>
    <string name="cost_helper_text">koszt</string>
    <string name="error_image_description">Grafika błędu</string>
    <string name="error_primary_text">Wystąpił błąd</string>
    <string name="error_network_text">Brak połączenia z internetem</string>
    <string name="error_auth_text">Nieudane uwierzytelnienie</string>
    <string name="error_stopped_text">System został zatrzymany</string>
    <string name="error_server_text">Wewnętrzny błąd serwera</string>
    <string name="autocomplete_empty_error_text">Brak lokalizacji</string>
    <string name="autocomplete_not_found_error_text">Nieznana lokalizacja</string>
    <string name="password_empty_text">Brak hasła</string>
    <string name="email_invalid_text" tools:ignore="Typos">Niepoprawny adres email</string>
    <string name="name_empty_text">Brak nazwy</string>
    <string name="threshold_invalid_text">Niepoprawna liczba</string>
    <string name="start_location_services_message">Aby kontynuować, włącz lokalizację urządzenia.</string>
    <string name="no_initialize_favourites_message">Nie udało się zainicjować ulubionych miejsc</string>
    <string name="no_initialize_history_message">Nie udało się zainicjalizować historii tras</string>
    <string name="station_empty_text">pusta</string>
    <string name="station_almost_empty_text">niemal pusta</string>
    <string name="no_file_message">Plik jest niedostępny</string>
    <string name="history_delete_item_description">Usuwanie wpisu</string>
    <string name="route_details_helper">Kliknij aby wyświetlić szczegóły…</string>
</resources>